public/stylesheets/style.css
#scripture{
  height: 100% !important;
  width: 100%;
}
#scripture_container{
 height: 100vh !important; 
 overflow: scroll;
}

#title{
    text-align: center;
}
.w3-card{
    padding: 1em;
    border: 1em;
}
#loginSection{
    overflow: hidden;
    padding: 0em !important;
    border: 0em !important;
}
#loginButton{
    float: left;
}
.w3-card{
    background-color: white;
}
 #loginInfo{
    float: right;
    overflow: hidden;
    padding-top: .5em;
}
#loginSection, #footer, #page, #header, #space, body{
    background-color: lightgrey !important;
}
#title{
    background-color: #343a40!important;
    color: white;
}

#annotations{
    color: #0000EE;
}
#reference {
    display: inline-block;
    margin-left: 1.5em;
}
input {
    margin-top: 0 !important;
}
label{
    margin-bottom: 0 !important;
}

